Updated extensions for correct namespaces. Modified makefiles to install different versions of the schemas in different directories. Modified the configure script to do the same thing. xsdgen has been modified as well, although it doesn't seem to have made it to this commit list.

--- a/configure.in
+++ b/configure.in
@@ -1011,6 +1011,8 @@ outfiles="$outfiles Makeconf GNUmakefile \
         protogeni/scripts/GNUmakefile protogeni/etc/GNUmakefile \
         protogeni/test/GNUmakefile protogeni/rspec/GNUmakefile \
         protogeni/rspec/0.1/GNUmakefile \
+	protogeni/rspec/0.2/GNUmakefile \
+	protogeni/rspec/2/GNUmakefile \
         collab/GNUmakefile \
         collab/trac/GNUmakefile \
         collab/jabber/GNUmakefile \
