--- a/tbsetup/ptopgen.in
+++ b/tbsetup/ptopgen.in
@@ -12,7 +12,7 @@ use Math::BigInt;
 
 use lib "@prefix@/lib";
 use libdb qw(TBGetSiteVar);
-
+use libadminctrl;
 use libptop;
 
 my $top = libptop->Create();
@@ -1624,6 +1624,8 @@ sub print_header {
 	    print "xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" ";
 	    my $ns = "";
 	    my $url = "";
+	    my $emulabns = "";
+	    my $emulaburl = "";
 	    if ($genimode eq $V_0_1) {
 		$ns = "http://www.protogeni.net/resources/rspec/0.1";
 		$url = "http://www.protogeni.net/resources/rspec/0.1/ad.xsd";
@@ -1633,9 +1635,18 @@ sub print_header {
 	    } elsif ($genimode eq $V_2) {
 		$ns = "http://www.protogeni.net/resources/rspec/2";
 		$url = "http://www.protogeni.net/resources/rspec/2/ad.xsd";
+		$emulabns = "http://www.protogeni.net/resources/rspec/ext/emulab/1";
+# XXX: This needs to be changed
+		$emulaburl = "http://www.cs.utah.edu/~tarunp/code/ptop_extension.xsd";
 	    }
 	    print "xmlns=\"$ns\" ";
-	    print "xsi:schemaLocation=\"$ns $url\" ";
+	    if ($genimode eq $V_2) {
+		print "xmlns:emulab=\"$emulabns\" ";
+		print "xsi:schemaLocation=\"$ns $url $emulabns $emulaburl\" ";
+	    }
+	    else {
+		print "xsi:schemaLocation=\"$ns $url\" ";
+	    }
 	    print "type=\"advertisement\" ";
 	    my @times = gmtime(time());
 	    printf("generated=\"%04d-%02d-%02dT%02d:%02d:%02dZ\" ",
@@ -1653,6 +1664,9 @@ sub print_footer {
     if ($do_xml && $genimode eq $NO_GENI) {
 	print "</ptop>\n";
     } elsif ($do_xml && $genimode ne $NO_GENI) {
+	if ($genimode eq $V_2) {
+	    print_type_limits();
+	}
 	print "</rspec>\n";
     }
 }
@@ -1799,6 +1813,28 @@ sub print_osids
     }
 }
 
+sub print_type_limits 
+{
+    my %admission_control;
+#     $experiment = Experiment->Lookup($pid, $exempt_eid);
+#     die("Could not look up experiment $pid,$exempt_eid\n")
+# 	if (!defined($experiment));
+    if (!TBAdmissionControlCheck(undef,$experiment, \%admission_control)) {
+	tberror("Failed admission control checks!\n");
+	return -1;
+    }
+    if (scalar(keys(%admission_control))) {
+	foreach my $typeclass (keys (%admission_control)) {
+	    my $count = $admission_control{$typeclass};
+
+	    print "  <emulab:set_type_limit ";
+	    print "typeclass=\"$typeclass\" ";
+	    print "count=\"$count\"";
+	    print "/>\n";
+	}
+    }
+}
+
 # The order print_node_types(), print_node_features(),
 # print_node_flags() must always be observed lest we break the schema.
 sub print_node_types
@@ -1820,7 +1856,7 @@ sub print_node_types
 		print "    type_slots=\"$count\"\n";
 	    }
 	    if ($is_static) {
-		print "    static=\"true\"\n";
+		print "static=\"true\"\n";
 	    }
 	    print "  />\n";
 	} elsif ($genimode eq $V_2) {
@@ -1830,7 +1866,17 @@ sub print_node_types
 	    if ($name eq "pcvm") {
 		print "  <sliver_type name=\"openvz\" />\n";
 	    }
-	    print "  <hardware_type name=\"$name\" />\n";
+	    print "  <hardware_type name=\"$name\">\n";
+	    if ($count eq "*") {
+		print "    <emulab:node_type type_slots=\"unlimited\" ";
+	    } else {
+		print "    <emulab:node_type type_slots=\"$count\" ";
+	    }
+	    if ($is_static) {
+		print "static=\"true\"";
+	    }
+	    print "/>\n";
+	    print "  </hardware_type>\n";
 	}
     }
 }
@@ -1840,7 +1886,7 @@ sub print_node_features
     my $i = 0;
     for (; $i < scalar(@_); ++$i) {
 	my ($name, $value) = split(/:/, $_[$i], 2);
-	my $flags = "    ";
+	my $flags = "";
 	if ($value >= 1.0) {
 	    $flags .= " violatable=\"true\" ";
 	}
@@ -1856,13 +1902,22 @@ sub print_node_features
 	    $flags .= " global_operator=\"OnceOnly\" ";
 	    $name = substr($name, 2);
 	}
-	print "  <fd \n";
-	print "     fd_name=\"$name\" \n";
-	print "     fd_weight=\"$value\" \n";
-	if ($flags ne "    ") {
-	    print $flags."\n";
+	if ($genimode eq $V_2) {
+	    print "  <emulab:fd name=\"$name\" weight=\"$value\" ";
+	    if ($flags ne "") {
+		print $flags;
+	    }
+	    print "/>\n";
 	}
-	print "  />\n";
+	else {
+	    print "  <fd \n";
+	    print "     fd_name=\"$name\" \n";
+	    print "     fd_weight=\"$value\" \n";
+	    if ($flags ne "") {
+		print $flags."\n";
+	    }
+	    print "  />\n";
+	}
     }
 }
 
