--- a/tbsetup/ptopgen.in
+++ b/tbsetup/ptopgen.in
@@ -33,7 +33,8 @@ use GeniHRN;
 sub usage()
 {
     print("Usage: ptopgen [-v] [-s switch] [-p pid [-e eid]] [-m factor] " .
-	  "[-n c/e] [-x] [-g (0.1 | 2)] [-c component-name]\n".
+	  "[-n c/e] [-x] [-g (0.1 | 2)] [-c component-name]".
+	  "[-l type-limit-file]\n" .
 	  "       -p include nodes the project has permission to use\n".
 	  "       -e include given experiments resources\n" .
 	  "          in the ptopfile (as if they were free)\n" .
@@ -46,13 +47,14 @@ sub usage()
 	  "       -u Prune unused interfaces of allocated nodes (-e)\n".
 	  "       -c Delay capacity override\n".
 	  "       -n Add in modelnet core and edge node features\n".
-	  "       -x Output into the new xml ptop format.\n".
+	  "       -x Output into the new xml ptop format\n".
 	  "       -g version With -x, geni version. Must be '0', '0.1' or '2'\n".
+	  "       -l specifies the location of the type limit file\n" .
           "       -1 Print an rspec containing only the node component-name");
         exit(-1);
 }
 
-my $optlist = "s:e:m:vp:rSan:c:uxg:h1:";
+my $optlist = "s:e:m:vp:rSan:c:uxg:h1:l:";
 my $mfactor;
 my $virtstuff = 0;
 my $widearea  = 0;
@@ -139,6 +141,8 @@ my $exempt_eid;
 my $switchtouse;
 my $experiment;
 
+my $typelimitfile = "";
+
 sub fatal($);
 
 #
@@ -206,6 +210,9 @@ if (defined($options{"x"})) {
 	$genimode = $options{"g"};
     }
     $do_xml = 1;
+}
+if (defined($options{"l"})) {
+    $typelimitfile = $options{"l"};
 }
 if (defined($options{"1"})) {
     $component_name = $options{"1"};
@@ -1780,6 +1787,7 @@ sub print_node
         }
 	print_node_flags(@$flags);
 	print_node_interfaces($name, @$interfaces);
+	print_node_features(@$features);
 	print "</node>\n";
     } else {
 	# ptop format
@@ -1815,19 +1823,17 @@ sub print_osids
 
 sub print_type_limits 
 {
-    my %admission_control;
-#     $experiment = Experiment->Lookup($pid, $exempt_eid);
-#     die("Could not look up experiment $pid,$exempt_eid\n")
-# 	if (!defined($experiment));
-    if (!TBAdmissionControlCheck(undef,$experiment, \%admission_control)) {
-	tberror("Failed admission control checks!\n");
-	return -1;
-    }
-    if (scalar(keys(%admission_control))) {
-	foreach my $typeclass (keys (%admission_control)) {
-	    my $count = $admission_control{$typeclass};
+    if ($typelimitfile ne "") {
+	open(TYPELIMIT, "<$typelimitfile") or 
+	    die("Count not open type limit file $typelimitfile\n");
+	my @typelimits = <TYPELIMIT>;
+	close(TYPELIMIT);
 
-	    print "  <emulab:set_type_limit ";
+	foreach $line (@typelimits) { 
+	    chomp($line);
+	    my ($typeclass, $count) = split(" ", $line);
+
+	    print "<emulab:set_type_limit ";
 	    print "typeclass=\"$typeclass\" ";
 	    print "count=\"$count\"";
 	    print "/>\n";
