Annotations work - well, ok, they haven't been rigorously tested yet, but I think they'll hold up. The only thing that is almost certainly broken is the conversion from links with multiple interfaces into the "node + point-to-point" links that assign knows how to deal with.
Mapper now has a flag to determine whether to output the text format or rspec. rspec outputs are named *.ptop.xml and *.vtop.xml for the advertisement and request respectively.

--- a/tbsetup/libvtop.pm.in
+++ b/tbsetup/libvtop.pm.in
@@ -2357,12 +2357,17 @@ sub GenVirtLans($)
 		#
 		if ($self->virtlan_use_linkdelay($vlan, $shaped)) {
 		    my $plink = "linksimple/$vname/$member0,$member1";
-		    
+		    my $others = {};
+		    if ($emulated) {
+			$others->{'emulated'} = 1;
+		    }
+		    if ($trivial_ok) {
+			$others->{'trivial_ok'} = 1;
+		    }
 		    $self->createLink($plink, $cmid, $vname0, $vname1, 
 				      ($top_bw == 0 ? "*" : 
 				       max($top_bw, $top_rbw)), $protocol,
-				      { 'emulated'   => "1",
-					'trivial_ok' => "1" });
+				      $others);
 	
 # 		    	$self->addlink("$plink $vname0 $vname1 ".
 # 				   ($top_bw == 0 ? "*" :
