Add index.php to list of directory index files
I thought I had done this before, but maybe I had just edited the
installed httpd.conf on boss in place. Oops!

--- a/apache/httpd.conf.in
+++ b/apache/httpd.conf.in
@@ -512,7 +512,7 @@ DocumentRoot "@prefix@/www"
 # directory index.  Separate multiple entries with spaces.
 #
 <IfModule mod_dir.c>
-    DirectoryIndex index.php3 index.html
+    DirectoryIndex index.php3 index.php index.html
 </IfModule>
 
 #
