--- a/protogeni/lib/GeniAM.pm.in
+++ b/protogeni/lib/GeniAM.pm.in
@@ -61,7 +61,19 @@ sub ListResources()
         'available' => $available,
         'compress' => $compress
     };
-    return GeniCMV2::DiscoverResources($discover_args);
+    my $response = GeniCMV2::DiscoverResources($discover_args);
+    if (GeniResponse::IsError($response)) {
+        return $response;
+    } else {
+        # DiscoverResources returns a base64 object, but ListResources
+        # needs to return a String representation of that base64
+        # object. The logic is that ListResources should *always*
+        # return a String instead of returning different types based
+        # on the args.
+        my $base64 = GeniResponse::value($response);
+        my $response_value = $base64->value();
+        return GeniResponse->Create( GENIRESPONSE_SUCCESS, $response_value );
+    }
 }
 
 # Create a sliver by allocating and starting resources.
