--- a/install/ops-install.in
+++ b/install/ops-install.in
@@ -567,7 +567,7 @@ Phase "portfixup", "Fixing up packages", sub {
 	#
 	Phase "m2crypto-egg", "Unpacking python m2crypto .egg", sub {
 	    my $pydir = "/usr/local/lib/python2.5/site-packages";
-	    my $egg = `ls -d $pydir/M2Crypto-0.19.1-py2.5-*.egg 2>/dev/null`;
+	    my $egg = `ls -d $pydir/M2Crypto-0.19.1-py2.5-*.egg 2>/dev/null | tail -1`;
 	    chomp($egg);
 	    if (! -x $EASYINSTALL) {
 		PhaseSkip("python easy_install missing");
@@ -578,6 +578,12 @@ Phase "portfixup", "Fixing up packages", sub {
 	    if (-d "$egg") {
 		PhaseSkip("py25-m2crypto egg already unpacked");
 	    }
+	    # XXX swig must be installed for easyinstall to exit correctly
+	    Phase "swig", "Installing swig", sub {
+		DoneIfPackageInstalled("swig");
+		my $pname = GetPackage("swig", $packagedir);
+		ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_ADD $pname");
+	    };
 	    ExecQuietFatal("mv $egg /var/tmp/");
 	    $egg =~ s/$pydir//;
 	    ExecQuietFatal("$EASYINSTALL -Z /var/tmp$egg");
