Download/unpack/patch rude source in obj tree instead of source.

--- a/event/linktest/rude/GNUmakefile.in
+++ b/event/linktest/rude/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2007 University of Utah and the Flux Group.
+# Copyright (c) 2000-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -11,6 +11,7 @@ SUBDIR		= event/linktest/rude
 
 # be sure to change version in rude-fetch.sh too
 VERSION		= 0.70
+TARBALL		= rude-0.70.tar.gz
 
 include $(OBJDIR)/Makeconf
 
@@ -54,13 +55,16 @@ client-install: $(ITARGETS)
 # Note: GNU make wants to pass options in MAKEFLAGS (w) that are incompatible
 # with BSD make.  So we just force configure to assume/use gmake for BSD.
 config.status:
-	MAKE=$(MAKE) $(SRCDIR)/rude-$(VERSION)/configure $(CONFIG_ARGS)
+	MAKE=$(MAKE) rude-$(VERSION)/configure $(CONFIG_ARGS)
 
 rude-$(VERSION):
-	$(SRCDIR)/rude-fetch.sh $(SRCDIR)
+	$(SRCDIR)/rude-fetch.sh $(SRCDIR) $(TARBALL)
 
 clean:
 	@if [ -r Makefile ]; then $(MAKE) -f Makefile clean; fi
+
+reallyclean:
+	rm -rf rude-$(VERSION) $(TARBALL)
 
 Makefile: config.status
 
