Don't build delay-agent on FreeBSD 8.
Delay agent won't build on FreeBSD 8.x right now due to dummynet API changes.
Not even sure we will bother to fix this since we have a newer, more OS
independent agent.

--- a/event/GNUmakefile.in
+++ b/event/GNUmakefile.in
@@ -18,7 +18,14 @@ ifneq ($(SYSTEM),CYGWIN_NT-5.1)
 SUBDIRS	       += trafgen
 endif
 ifeq ($(SYSTEM),FreeBSD)
-SUBDIRS	       += sched delay-agent stated
+FBSDREL	:= $(shell uname -r | sed -e 's/\([^-][^-]*\)-.*/\1/')
+FBSDMAJ := $(basename $(FBSDREL))
+SUBDIRS	       += sched stated
+ifneq ($(FBSDMAJ),8)
+# doesn't build right now due to API changes
+SUBDIRS	       += delay-agent
+endif
+
 endif
 
 all:	etc-subdir trafgen-fetch all-subdirs
