Nit: hacky install of capture startup file should only occur for FreeBSD4.
It used to say FBSDVERSION != 6, but that was when there was only 4 and 6.

--- a/rc.d/GNUmakefile.in
+++ b/rc.d/GNUmakefile.in
@@ -29,7 +29,7 @@ TIP_SCRIPTS	=
 ifeq ($(SYSTEM),FreeBSD)
 FBSDVERSION   := $(shell uname -v | sed -e 's/FreeBSD \([0-9]\).*/FreeBSD\1/')
 
-ifeq ($(FBSDVERSION),FreeBSD6)
+ifneq ($(FBSDVERSION),FreeBSD4)
 ifeq ($(WINSUPPORT),1)
 OPS_SCRIPTS += silly.sh
 endif
